[package]
name = "f1rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"]}
dirs = "5.0.1"
reqwest = { version = "0.11.20", features = ["blocking"]}
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
log = "0.4.0"
env_logger = "0.9.0"

